--- a/index.html
+++ b/index.html
@@ -31,4 +31,15 @@
         esse bloco vai ser interpretado literalmente pelo browser
     </pre>
     <a href="https://youtu.be/dQw4w9WgXcQ?si=1bYAkv_Safogo0Yx">Vídeo</a>
+    <ul>
+        <li>uma coisa</li>
+        <li>outra coisa</li>
+        <li>mais uma</li>
+    </ul>
+    <ol>
+        <li>uma coisa</li>
+        <li>inclui mais uma coisa</li>
+        <li>outra coisa</li>
+        <li>mais uma</li>
+    </ol>
 </html>
